cmake_minimum_required(VERSION 3.0.0)
project(LeetCode VERSION 0.1.0)

add_subdirectory(${CMAKE_SOURCE_DIR}/Catch2)

macro(SUBDIRLIST result curdir)
    file(GLOB children RELATIVE ${curdir} ${curdir}/*)
    set(dirlist "")
    foreach(child ${children})
        if(IS_DIRECTORY ${curdir}/${child})
            if((NOT (${child} MATCHES Catch2))
                AND (NOT (${child} MATCHES .vscode))
                AND (NOT (${child} MATCHES .git))
                AND (NOT (${child} MATCHES .build)))
                LIST(APPEND dirlist ${curdir}/${child})
            ENDIF()
        endif()
    endforeach()
    set(${result} ${dirlist})
endmacro()

macro(GETFILELIST result curdir)
    file(GLOB children RELATIVE ${curdir} ${curdir}/*)
    set(dirlist "")
    foreach(child ${children})
        # MESSAGE(STATUS "===" ${child})
        if(NOT (IS_DIRECTORY ${curdir}/${child}))
            LIST(APPEND dirlist ${child})
        endif()
    endforeach()
    set(${result} ${dirlist})
endmacro()

SUBDIRLIST(subdirs ${CMAKE_CURRENT_SOURCE_DIR})

FOREACH(subdir ${subdirs})
    GETFILELIST(files ${subdir})
    LIST(FIND files "CMakeLists.txt" RET)
    if (NOT (${RET} EQUAL -1))
        ADD_SUBDIRECTORY(${subdir})
    endif ()
ENDFOREACH()

MESSAGE(STATUS ${subdirs})
